environments/common/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hitster-app
  labels:
    app: hitster-app
spec:
  selector:
    matchLabels:
      app: hitster-app
  template:
    metadata:
      labels:
        app: hitster-app
    spec:
      enableServiceLinks: false
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: hitster-app
          image: ghcr.io/simonbrundin/hitster:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
