environments/common/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hitster-service
spec:
  selector:
    app: hitster-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
