environments/common/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hitster-route
  namespace: hitster
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: simons-gateway
      namespace: envoy
  hostnames:
    - "hitster.simonbrundin.com"
    - "hitster-dev.simonbrundin.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hitster-service
          port: 80
          weight: 1
          namespace: hitster
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 30s
